# frame-sdk-python

./: README.md  license.md  pyproject.toml
examples/: draw_image.py
src/frame_sdk/: __init__.py  bluetooth.py  camera.py  display.py  files.py  frame.py  library_functions.py  microphone.py  motion.py
tests/: test_bluetooth.py  test_camera.py  test_display.py  test_files.py  test_frame.py  test_microphone.py  test_motion.py
